--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <article class="card">
           <main>
             <p class="intro">
-              I'am a hard-working, reliable freelance web developer. I love
+              I am a hard-working, reliable freelance web developer. I love
               being in this line of work because I am passionate about tech,
               design and innovation. do you need a high-quality, clean coded
               website? I will help you with that.
